[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.39", features = ["serde"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
serde_with = "3.12.0"
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.5"
bytes = "1.10.0"
console-subscriber = "0.4.1"
dashmap = "6.1.0"
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
http = "1.2.0"
loom = "0.7.2"
nanoid = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
